# PharMgmt

./: .gitignore  README.md  pyproject.toml
.gsd/: DECISIONS.md  JOURNAL.md  ROADMAP.md  SPEC.md  STATE.md  TODO.md
.gsd/phases/1/: 1-PLAN.md  2-PLAN.md  3-PLAN.md  4-PLAN.md  5-PLAN.md
src/pharmgmt/: __init__.py  config.py  db.py
src/pharmgmt/api/: __init__.py
src/pharmgmt/cli/: __init__.py
src/pharmgmt/models/: __init__.py  alert.py  base.py  batch.py  document.py  line_item.py  parsing_run.py  payment.py  product.py  schema_meta.py  staging.py  supplier.py
src/pharmgmt/parsing/: __init__.py
tests/: __init__.py
